[master] Disable creating service users in domains (#5077)
Co-authored-by: Marcin Regulski <165262917+mregulski-gravitee@users.noreply.github.com>
Co-authored-by: Marcin Regulski <marcin.regulski@graviteesource.com>
(cherry picked from commit 3484823a9fbb13196e2ec261b5a91da64e9c2ab3)