@@ -30,6 +30,7 @@ import io.gravitee.am.model.permissions.Permission;
 import io.gravitee.am.service.exception.TechnicalManagementException;
 import io.gravitee.am.service.exception.UserAlreadyExistsException;
 import io.gravitee.am.service.exception.UserProviderNotFoundException;
+import io.gravitee.am.service.model.NewOrganizationUser;
 import io.gravitee.am.service.model.NewUser;
 import io.gravitee.common.http.HttpStatusCode;
 import io.gravitee.common.util.Maps;
@@ -53,7 +54,7 @@ import java.util.Set;
 import java.util.function.Function;
 
 import static io.gravitee.am.model.ReferenceType.ORGANIZATION;
-import static java.util.stream.Collectors.toList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.mockito.ArgumentMatchers.any;
@@ -66,7 +67,7 @@ import static org.mockito.Mockito.when;
  * @author Titouan COMPIEGNE (titouan.compiegne at graviteesource.com)
  * @author GraviteeSource Team
  */
-public class OrganizationUsersResourceTest extends JerseySpringTest {
+public class UsersResourceTest extends JerseySpringTest {
 
     public static final String ORGANIZATION_DEFAULT = "DEFAULT";
 
@@ -183,8 +184,8 @@ public class OrganizationUsersResourceTest extends JerseySpringTest {
         Page<User> values = readEntity(response, new TypeReference<>() {
         });
 
-        assertEquals(0, values.getCurrentPage());
-        assertEquals(2, values.getTotalCount());
+        assertThat(values.getCurrentPage()).isZero();
+        assertThat(values.getTotalCount()).isEqualTo(2);
         final Collection<User> data = values.getData();
 
         Assertions.assertTrue(getFilteredElements(data, User::getId).containsAll(List.of("user-id-1", "domain-id-2")));
@@ -230,8 +231,8 @@ public class OrganizationUsersResourceTest extends JerseySpringTest {
         Page<User> values = readEntity(response, new TypeReference<>() {
         });
 
-        assertEquals(0, values.getCurrentPage());
-        assertEquals(2, values.getTotalCount());
+        assertThat(values.getCurrentPage()).isZero();
+        assertThat(values.getTotalCount()).isEqualTo(2);
         final Collection<User> data = values.getData();
 
         Assertions.assertTrue(getFilteredElements(data, User::getId).containsAll(List.of("user-id-1", "domain-id-2")));
@@ -244,7 +245,7 @@ public class OrganizationUsersResourceTest extends JerseySpringTest {
     }
 
     private static <T> List<T> getFilteredElements(Collection<User> data, Function<User, T> mapper, boolean withNulls) {
-        return data.stream().map(mapper).filter(i -> withNulls || i != null).distinct().collect(toList());
+        return data.stream().map(mapper).filter(i -> withNulls || i != null).distinct().toList();
     }
 
     @Test
@@ -311,7 +312,7 @@ public class OrganizationUsersResourceTest extends JerseySpringTest {
 
         when(organizationUserService.createGraviteeUser(any(), any(), any())).thenReturn(Single.just(mockUser));
 
-        final NewUser entity = new NewUser();
+        final var entity = new NewOrganizationUser();
         entity.setUsername("test");
         entity.setPassword("password");
         entity.setEmail("email@acme.fr");
@@ -344,7 +345,7 @@ public class OrganizationUsersResourceTest extends JerseySpringTest {
 
         when(organizationUserService.createGraviteeUser(any(), any(), any())).thenReturn(Single.just(mockUser));
 
-        final NewUser entity = new NewUser();
+        final NewOrganizationUser entity = new NewOrganizationUser();
         entity.setUsername("test");
         entity.setEmail("test@test.com");
         entity.setServiceAccount(Boolean.TRUE);
@@ -411,8 +412,8 @@ public class OrganizationUsersResourceTest extends JerseySpringTest {
         Page<User> values = readEntity(response, new TypeReference<>() {
         });
 
-        assertEquals(0, values.getCurrentPage());
-        assertEquals(3, values.getTotalCount());
+        assertThat(values.getCurrentPage()).isZero();
+        assertThat(values.getTotalCount()).isEqualTo(3);
         final Collection<User> data = values.getData();
 
         Assertions.assertTrue(getFilteredElements(data, User::getId).containsAll(List.of("service-id-1", "user-id-2", "user-id-3")));
